# Cargo.toml
[package]
name = "tap_mac_addr_test"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tun-rs = { git = "https://github.com/tun-rs/tun-rs", features = ["async"] }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
rand = "0.8"
env_logger = "0.11"
log = "0.4"